network-system/adguard/statefulset.yaml
---
# Source: adguard-home/templates/common.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: adguard-home
  namespace: network-system
  labels:
    app.kubernetes.io/instance: adguard
    app.kubernetes.io/name: adguard-home
  annotations:
    configmap.reloader.stakater.com/reload: adguard-home-config
spec:
  revisionHistoryLimit: 3
  replicas: 14
  updateStrategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
  serviceName: adguard-home
  selector:
    matchLabels:
      app.kubernetes.io/name: adguard-home
      app.kubernetes.io/instance: adguard
  template:
    metadata:
      labels:
        app.kubernetes.io/name: adguard-home
        app.kubernetes.io/instance: adguard
    spec:
      serviceAccountName: default
      automountServiceAccountToken: true
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      containers:
      - name: adguard-home
        # renovate: repository=adguard/adguardhome
        image: "adguard/adguardhome:v0.107.79"
        imagePullPolicy: IfNotPresent
        args:
        - --config
        - /opt/adguardhome/conf/AdGuardHome.yaml
        - --work-dir
        - /opt/adguardhome/work
        - --no-check-update
        ports:
        - name: dns-tcp
          containerPort: 53
          protocol: TCP
        - name: dns-tls-tcp
          containerPort: 853
          protocol: TCP
        - name: dns-udp
          containerPort: 53
          protocol: UDP
        - name: dns-quic-udp
          containerPort: 853
          protocol: UDP
        - name: http
          containerPort: &dns_http_port 3000
          protocol: TCP
        - name: dns-http
          containerPort: 443
          protocol: TCP
        volumeMounts:
        - name: adguard-home-config
          mountPath: /tmp/AdGuardHome.yaml
          subPath: AdGuardHome.yaml
        - name: config
          mountPath: /opt/adguardhome/conf
        - name: certificate
          mountPath: /opt/adguardcertificate
          readOnly: true
        resources:
          limits:
            cpu: "2"
            memory: "1Gi"
          requests:
            cpu: "250m"
            memory: "256Mi"
        livenessProbe:
          tcpSocket:
            port: *dns_http_port
          initialDelaySeconds: 30
          failureThreshold: 3
          timeoutSeconds: 1
          periodSeconds: 10
        readinessProbe:
          tcpSocket:
            port: *dns_http_port
          initialDelaySeconds: 30
          failureThreshold: 3
          timeoutSeconds: 1
          periodSeconds: 10
        startupProbe:
          tcpSocket:
            port: *dns_http_port
          initialDelaySeconds: 30
          failureThreshold: 30
          timeoutSeconds: 1
          periodSeconds: 5
      volumes:
      - name: adguard-home-config
        configMap:
          name: adguard-home-config
      - name: config
        emptyDir:
          medium: Memory
      - name: certificate
        secret:
          secretName: adguard-homelab-heyser-xyz-tls
          optional: false
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app.kubernetes.io/name
                  operator: In
                  values:
                  - adguard-home
              topologyKey: kubernetes.io/hostname
      tolerations:
      - key: node-role.kubernetes.io/master
        operator: Exists
      - key: node-role.kubernetes.io/control-plane
        operator: Exists
