network-system/adguard/deploy.yaml

---
apiVersion: v1
kind: Service
metadata:
  name: adguard-home-dns-tcp
  namespace: network-system
  labels:
    app.kubernetes.io/name: adguard-home
    app.kubernetes.io/instance: adguard
  annotations:
    cni.projectcalico.org/ipAddrs: '["10.0.100.2"]'
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  externalIPs:
    - 10.0.100.2
  ports:
  - port: 53
    targetPort: 53
    protocol: TCP
    name: dns-tcp
  selector:
    app.kubernetes.io/name: adguard-home
    app.kubernetes.io/instance: adguard
---
# Source: adguard-home/templates/common.yaml
apiVersion: v1
kind: Service
metadata:
  name: adguard-home-dns-udp
  namespace: network-system
  labels:
    app.kubernetes.io/instance: adguard
    app.kubernetes.io/name: adguard-home
  annotations:
    cni.projectcalico.org/ipAddrs: '["10.0.100.2"]'
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  externalIPs:
    - 10.0.100.2
  ports:
  - port: 53
    targetPort: 53
    protocol: UDP
    name: dns-udp
  selector:
    app.kubernetes.io/name: adguard-home
    app.kubernetes.io/instance: adguard
---
# Source: adguard-home/templates/common.yaml
apiVersion: v1
kind: Service
metadata:
  name: adguard-home
  namespace: network-system
  labels:
    app.kubernetes.io/instance: adguard
    app.kubernetes.io/name: adguard-home
  annotations:
    cni.projectcalico.org/ipAddrs: '["10.0.100.2"]'
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  externalIPs:
    - 10.0.100.2
  ports:
  - port: 3000
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app.kubernetes.io/name: adguard-home
    app.kubernetes.io/instance: adguard
---
# Source: adguard-home/templates/common.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adguard-home
  namespace: network-system
  labels:
    app.kubernetes.io/instance: adguard
    app.kubernetes.io/name: adguard-home
spec:
  revisionHistoryLimit: 3
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: adguard-home
      app.kubernetes.io/instance: adguard
  template:
    metadata:
      labels:
        app.kubernetes.io/name: adguard-home
        app.kubernetes.io/instance: adguard
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app.kubernetes.io/name
                operator: In
                values:
                - adguard-home
            topologyKey: "kubernetes.io/hostname"
      serviceAccountName: default
      automountServiceAccountToken: true
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      containers:
      - name: adguard-home
        # renovate: repository=adguard/adguardhome
        image: "adguard/adguardhome:v0.107.52"
        imagePullPolicy: IfNotPresent
        args:
        - --config
        - /opt/adguardhome/conf/AdGuardHome.yaml
        - --work-dir
        - /opt/adguardhome/work
        - --no-check-update
        ports:
        - name: dns-tcp
          containerPort: 53
          protocol: TCP
        - name: dns-udp
          containerPort: 53
          protocol: UDP
        - name: http
          containerPort: 3000
          protocol: TCP
        volumeMounts:
        - name: adguard-home-config
          mountPath: /tmp/AdGuardHome.yaml
          subPath: AdGuardHome.yaml
        - name: config
          mountPath: /opt/adguardhome/conf
        resources:
          limits:
            cpu: "2"
            memory: "1Gi"
          requests:
            cpu: "250m"
            memory: "256Mi"
        livenessProbe:
          tcpSocket:
            port: 3000
          initialDelaySeconds: 0
          failureThreshold: 3
          timeoutSeconds: 1
          periodSeconds: 10
        readinessProbe:
          tcpSocket:
            port: 3000
          initialDelaySeconds: 0
          failureThreshold: 3
          timeoutSeconds: 1
          periodSeconds: 10
        startupProbe:
          tcpSocket:
            port: 3000
          initialDelaySeconds: 0
          failureThreshold: 30
          timeoutSeconds: 1
          periodSeconds: 5
      volumes:
      - name: adguard-home-config
        configMap:
          name: adguard-home-config
      - name: config
        emptyDir:
          medium: Memory
      tolerations:
      - effect: PreferNoSchedule
        key: node-role.kubernetes.io
        value: master
      - key: node-role.kubernetes.io/control-plane
        operator: Equal
        effect: NoSchedule
---
# Source: adguard-home/templates/common.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adguard-home
  namespace: network-system
  labels:
    app.kubernetes.io/instance: adguard
    app.kubernetes.io/name: adguard-home
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - "dns.homelab.heyser.xyz"
        - "adguard.homelab.heyser.xyz"
      secretName: "adguard-homelab-heyser-xyz-tls"
  rules:
    - host: "dns.homelab.heyser.xyz"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: adguard-home
                port:
                  number: 3000
    - host: "adguard.homelab.heyser.xyz"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: adguard-home
                port:
                  number: 3000
