network-system/adguard/tailscale.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adguard-tailscale
  namespace: network-system
spec:
  defaultBackend:
    service:
      name: adguard-dns
      port:
        number: 443
  ingressClassName: tailscale
  tls:
    - hosts:
        - adguard
